--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -1,4 +1,4 @@
-//header
+/////////////////////////////////////header
 
 .navbar-default{
 	background-image: none;
@@ -149,7 +149,7 @@
 	
 }
 
-//content-header
+/////////////////////////////////////////////////content-header
 
 .no-padding {
 	padding: 0;
@@ -221,6 +221,70 @@
 				height: 20px;
 				padding: 0 15px 0 28px;
 				background: url('../../../ui/uploads/pet-icon.png') no-repeat;
+			}
+		}
+	}
+}
+
+
+
+
+
+//////////////////////////////////footer
+
+.footer-wrap {
+	background-color: #453c25;
+	padding: 24px 50px 23px 50px;
+
+	.footer-nav-links{
+		text-decoration: inherit;
+		padding: 10px 0 0 0;
+		li {
+			a {
+				color: #fff;	
+				text-decoration: none;	
+			}
+		}
+		:hover {
+				color: #ffdf06;
+		}
+	}
+
+	.footer-logo-link {
+		margin-top: 6px;
+		
+		.footer-logo {
+			width: 57px;
+			height: 27px;
+			display: inline-block;
+			background: url('../../../ui/uploads/footer-arrow.png') 100% 100% no-repeat;
+		}
+		:hover {
+			background: url('../../../ui/uploads/footer-arrow_hover.png') 100% 100% no-repeat;
+		}
+
+	}
+	.footer-copyright {
+		color: #796b46;
+	}
+
+	.footer-socials {
+		.f-social-fb{
+			span{
+
+				width: 28px;
+				height: 28px;
+				display: inline-block;
+				background: url('../../../ui/uploads/footer-fb.png') 100% 100% no-repeat;
+			}
+		}
+		.f-social-tw{
+			span{
+
+				width: 28px;
+				height: 28px;
+				display: inline-block;
+				background: url('../../../ui/uploads/footer-tw.png') 100% 100% no-repeat;
 			}
 		}
 	}
