--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -56,39 +56,10 @@
 
   </header>
 
-  <section></section>
-
-  <footer class="container">
-    <div class="row">
-      <div class="col-xs-6 col-md-4">
-        <ul class="list-inline">
-          <li>
-            <a href="#">Home</a>
-          </li>
-          <li>
-            <a href="#">Itineraries</a>
-          </li>
-          <li>
-            <a href="#">About</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-xs-6 col-md-4">
-        <a href="#" class="footer-logo-btn">/*/</a>
-      </div>
-      <div class="col-xs-6 col-md-4">
-        <div class="footer-socials">
-          <button type="button" class="f-social-fb"></button>
-          <button type="button" class="f-social-fb"></button>
-        </div>
-        <span class="copyright">(c) Wanderist 2014</span>
-      </div>
-    </div>
-
-  </footer>
-  
-
-
+  <section class="aside-menu container">
+    <div></div>
+  </section>
+<script type="text/javascript" src="../scripts/GoogleMaps.js"></script>
 </body>
 
 </html>
