--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -20,7 +20,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
 
-    <link rel="stylesheet" type="text/css" href="ui/styles/css/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/css/main.css">
 
 
 </head>
