--- a/app/ui/styles/css/main.css
+++ b/app/ui/styles/css/main.css
@@ -305,7 +305,7 @@
   border-radius: 10px;
 }
 
-/* line 281, ../scss/main.scss */
+/* line 282, ../scss/main.scss */
 .content-primary-wrap {
   margin: 0 10%;
   padding: 5px;
@@ -323,7 +323,7 @@
   	    border-radius: 50%;
       }*/
 }
-/* line 299, ../scss/main.scss */
+/* line 300, ../scss/main.scss */
 .content-primary-wrap .panel-heading {
   padding: 5px 15px;
   background: linear-gradient(to right, #ffffff, #f5f4e2);
@@ -331,24 +331,24 @@
   border-bottom: 2px dashed #edede9;
   border-radius: 0;
 }
-/* line 307, ../scss/main.scss */
+/* line 308, ../scss/main.scss */
 .content-primary-wrap .panel-heading .trip-title {
   color: #3d380A;
 }
-/* line 310, ../scss/main.scss */
+/* line 311, ../scss/main.scss */
 .content-primary-wrap .panel-heading .trip-title a {
   color: #3d380A;
 }
-/* line 312, ../scss/main.scss */
+/* line 313, ../scss/main.scss */
 .content-primary-wrap .panel-heading .trip-title a:hover {
   text-decoration: none;
 }
-/* line 315, ../scss/main.scss */
+/* line 316, ../scss/main.scss */
 .content-primary-wrap .panel-heading .trip-title a:focus {
   outline: none;
   text-decoration: none;
 }
-/* line 320, ../scss/main.scss */
+/* line 321, ../scss/main.scss */
 .content-primary-wrap .panel-heading .trip-title a span i {
   top: -5px;
   padding: 5px;
@@ -356,11 +356,11 @@
   border-radius: 50%;
   background-color: #fff;
 }
-/* line 331, ../scss/main.scss */
+/* line 332, ../scss/main.scss */
 .content-primary-wrap .trip-body {
-  padding-bottom: 100px;
+  padding-bottom: 150px;
 }
-/* line 334, ../scss/main.scss */
+/* line 335, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-map-img {
   width: 340px;
   height: 225px;
@@ -368,7 +368,7 @@
   background: url("../../../ui/uploads/trip-map.png") 100% 100% no-repeat;
   margin-bottom: 45px;
 }
-/* line 341, ../scss/main.scss */
+/* line 342, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv2-img {
   width: 340px;
   height: 200px;
@@ -376,31 +376,44 @@
   position: relative;
   background: url("../../../ui/uploads/trip-lv-img2.png") 100% 100% no-repeat;
 }
-/* line 348, ../scss/main.scss */
+/* line 349, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv2-img .trip-item-details {
   position: absolute;
-  bottom: -115px;
+  bottom: -155px;
   width: inherit;
   background-color: #fff;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-/* line 356, ../scss/main.scss */
+/* line 357, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv2-img .trip-item-details P {
   padding: 15px;
 }
-/* line 361, ../scss/main.scss */
+/* line 360, ../scss/main.scss */
+.content-primary-wrap .trip-body .trip-body-lv2-img .trip-item-details .trip-item-link {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  color: #ec4b36;
+  padding: 8px 5px 8px 15px;
+  margin-bottom: 18px;
+  background: linear-gradient(to right, #ffffff, #f5f4e2);
+  border-top: 1px dashed #edede9;
+  border-bottom: 1px dashed #edede9;
+  border-radius: 0;
+}
+/* line 372, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv2-img .trip-item-details .trip-item-link:hover {
   text-decoration: none;
 }
-/* line 364, ../scss/main.scss */
+/* line 375, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv2-img .trip-item-details .trip-item-link .map-pointer {
   width: 10px;
   height: 15px;
   display: inline-block;
   background: url("../../../ui/uploads/map-pointer.png") 100% 100% no-repeat;
 }
-/* line 374, ../scss/main.scss */
+/* line 385, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-timeline {
   width: 100px;
   height: 364px;
@@ -409,40 +422,53 @@
   top: 45px;
   background: url("../../../ui/uploads/trip-timeline.png") 100% 100% no-repeat;
 }
-/* line 382, ../scss/main.scss */
+/* line 393, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv1-img {
   width: 340px;
   height: 200px;
   position: relative;
   display: inline-block;
   background: url("../../../ui/uploads/trip-lv-img.png") 100% 100% no-repeat;
-  margin-bottom: 95px;
+  margin-bottom: 120px;
 }
-/* line 390, ../scss/main.scss */
+/* line 401, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv1-img .trip-item-details {
   position: absolute;
-  bottom: -80px;
+  bottom: -115px;
   width: inherit;
   background-color: #fff;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-/* line 398, ../scss/main.scss */
+/* line 409, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv1-img .trip-item-details P {
   padding: 15px;
 }
-/* line 403, ../scss/main.scss */
+/* line 412, ../scss/main.scss */
+.content-primary-wrap .trip-body .trip-body-lv1-img .trip-item-details .trip-item-link {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  padding: 8px 5px 8px 15px;
+  margin-bottom: 18px;
+  color: #ec4b36;
+  background: linear-gradient(to right, #ffffff, #f5f4e2);
+  border-top: 1px dashed #edede9;
+  border-bottom: 1px dashed #edede9;
+  border-radius: 0;
+}
+/* line 424, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv1-img .trip-item-details .trip-item-link:hover {
   text-decoration: none;
 }
-/* line 406, ../scss/main.scss */
+/* line 427, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv1-img .trip-item-details .trip-item-link .map-pointer {
   width: 10px;
   height: 15px;
   display: inline-block;
   background: url("../../../ui/uploads/map-pointer.png") 100% 100% no-repeat;
 }
-/* line 416, ../scss/main.scss */
+/* line 437, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv3-img {
   width: 340px;
   height: 170px;
@@ -450,24 +476,37 @@
   display: inline-block;
   background: url("../../../ui/uploads/trip-lv-img3.png") 100% 100% no-repeat;
 }
-/* line 423, ../scss/main.scss */
+/* line 444, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv3-img .trip-item-details {
   position: absolute;
-  bottom: -98px;
+  bottom: -135px;
   width: inherit;
   background-color: #fff;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-/* line 431, ../scss/main.scss */
+/* line 452, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv3-img .trip-item-details P {
   padding: 15px;
 }
-/* line 436, ../scss/main.scss */
+/* line 455, ../scss/main.scss */
+.content-primary-wrap .trip-body .trip-body-lv3-img .trip-item-details .trip-item-link {
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  padding: 8px 5px 8px 15px;
+  margin-bottom: 18px;
+  color: #ec4b36;
+  background: linear-gradient(to right, #ffffff, #f5f4e2);
+  border-top: 1px dashed #edede9;
+  border-bottom: 1px dashed #edede9;
+  border-radius: 0;
+}
+/* line 467, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv3-img .trip-item-details .trip-item-link:hover {
   text-decoration: none;
 }
-/* line 439, ../scss/main.scss */
+/* line 470, ../scss/main.scss */
 .content-primary-wrap .trip-body .trip-body-lv3-img .trip-item-details .trip-item-link .map-pointer {
   width: 10px;
   height: 15px;
@@ -475,7 +514,7 @@
   background: url("../../../ui/uploads/map-pointer.png") 100% 100% no-repeat;
 }
 
-/* line 454, ../scss/main.scss */
+/* line 485, ../scss/main.scss */
 .content-slave-wrap .dotted-trip-img {
   width: 195px;
   height: 75px;
@@ -483,13 +522,13 @@
   margin: 0 auto;
   background: url("../../../ui/uploads/dotted-trip.png") 100% 100% no-repeat;
 }
-/* line 464, ../scss/main.scss */
+/* line 495, ../scss/main.scss */
 .content-slave-wrap p {
   width: 300px;
   height: auto;
   margin: 0 auto;
 }
-/* line 469, ../scss/main.scss */
+/* line 500, ../scss/main.scss */
 .content-slave-wrap .new-contest-btn {
   width: 269px;
   height: 50px;
@@ -502,55 +541,75 @@
   margin: 15px 0 20px 0;
 }
 
-/* line 497, ../scss/main.scss */
+/* line 528, ../scss/main.scss */
 .footer-wrap {
   background-color: #453c25;
   padding: 24px 50px 23px 50px;
 }
-/* line 501, ../scss/main.scss */
+/* line 532, ../scss/main.scss */
 .footer-wrap .footer-nav-links {
   text-decoration: inherit;
   padding: 10px 0 0 0;
 }
-/* line 505, ../scss/main.scss */
+/* line 536, ../scss/main.scss */
 .footer-wrap .footer-nav-links li a {
   color: #fff;
   text-decoration: none;
 }
-/* line 510, ../scss/main.scss */
+/* line 541, ../scss/main.scss */
 .footer-wrap .footer-nav-links :hover {
   color: #ffdf06;
 }
-/* line 515, ../scss/main.scss */
+/* line 546, ../scss/main.scss */
 .footer-wrap .footer-logo-link {
   margin-top: 6px;
 }
-/* line 518, ../scss/main.scss */
+/* line 549, ../scss/main.scss */
 .footer-wrap .footer-logo-link .footer-logo {
   width: 57px;
   height: 27px;
   display: inline-block;
   background: url("../../../ui/uploads/footer-arrow.png") 100% 100% no-repeat;
 }
-/* line 524, ../scss/main.scss */
+/* line 555, ../scss/main.scss */
 .footer-wrap .footer-logo-link :hover {
   background: url("../../../ui/uploads/footer-arrow_hover.png") 100% 100% no-repeat;
 }
-/* line 529, ../scss/main.scss */
+/* line 560, ../scss/main.scss */
 .footer-wrap .footer-copyright {
   color: #796b46;
 }
-/* line 535, ../scss/main.scss */
+/* line 566, ../scss/main.scss */
 .footer-wrap .footer-socials .f-social-fb span {
   width: 28px;
   height: 28px;
   display: inline-block;
   background: url("../../../ui/uploads/glyphicons-social/glyphicons-social-31-facebook.png") 100% 100% no-repeat;
 }
-/* line 544, ../scss/main.scss */
+/* line 575, ../scss/main.scss */
 .footer-wrap .footer-socials .f-social-tw span {
   width: 28px;
   height: 28px;
   display: inline-block;
   background: url("../../../ui/uploads/glyphicons-social/glyphicons-social-32-twitter.png") 100% 100% no-repeat;
+}
+
+/* line 590, ../scss/main.scss */
+.btn-sidebar {
+  width: 20px;
+  height: 30px;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  position: relative;
+  top: 75px;
+  left: 0px;
+  background-color: #fede06;
+}
+
+/* line 601, ../scss/main.scss */
+.sidebar-wrap {
+  width: 560px;
+  height: auto;
+  position: absolute;
+  left: 0;
 }
