--- a/app/ui/styles/scss/main.scss
+++ b/app/ui/styles/scss/main.scss
@@ -30,6 +30,18 @@
 	}	
 }
 
+.left-side-menu-wrap {
+	width: 340px;
+	position: absolute;
+	left: 0;
+
+	.header-logo {
+		width: 100%;
+		height: 100%;
+		background: url('../../../ui/uploads/overview-icon.png') 100% 100% no-repeat;
+	}
+}
+
 .btn-overview {
 	width: 140px;
 	background-color: #C8b485;
@@ -667,7 +679,6 @@
 			bottom: 70px;
 			left: 47px;
 		}
-
 		span{
 			i{
 				padding: 10px;
