--- a/app/ui/views/details.html
+++ b/app/ui/views/details.html
@@ -32,26 +32,87 @@
     <div class="row">
       <nav class="navbar navbar-default">
         <div class="col-sm-6">
-<!--           <div class="collapse navbar-collapse pull-left" id="bs-example-navbar-collapse-1">
-            <ul class="list-group">
-              <li>
-                <a href="#" class="header-logo"></a>
-              </li>
-              <li>
-                <a href="#" class="">Itineraries</a>
-              </li>
-              <li>
-                <a href="#" class="">Contests</a>
-              </li>
-              <li>
-                <a href="#" class="">John Kennedy</a>
-              </li>
-              <li>
-                <a href="#" class="">Messages</a>
-              </li>
-            </ul>
-          </div> -->
-           <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+
+          <div class="collapse panel-collapse pull-left left-side-menu-wrap" data-toggle="collapse" id="bs-example-navbar-collapse-1" aria-labelledby="bs-example-navbar-collapse-1">
+          <div class="panel-group" id="sidebar_menu" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-default">
+              <div class="header-logo">
+
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h5 class="panel-title">
+                  <a href="#">Itineraraies</a>
+                </h5>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h5 class="panel-title">
+                  <a href="#">Contests</a>
+                </h5>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="user_profile">
+                <h5 class="panel-title">
+                  <a href="#user_profile_list" role="button" data-toggle="collapse" aria-expended="true" aria-controls="user-profile">John Kennedy</a>
+                </h5>
+              </div>
+              <div id="user_profile_list" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
+                <div class="panel-body list-group">
+                  <ul class="">
+                    <li>
+                      <a href="">My itineraries</a>
+                    </li>
+                    <li>
+                      <a href="">My contests</a>
+                    </li>
+                    <li>
+                      <a href="">Settings</a>
+                    </li>
+                    <li>
+                      <a href="">Payments</a>
+                    </li>
+                    <li>
+                      <a href="">Log out</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="user_profile">
+                <h5 class="panel-title">
+                  <a href="#user_profile_msgs" role="button" data-toggle="collapse" aria-expended="true" aria-controls="user-profile">Messages</a>
+                </h5>
+              </div>
+              <div id="user_profile_msgs" class="panel-collapse collapse in" role="tabpanel"  aria-labelledby="user_profile" data-toggle="collapse">
+                <div class="panel-body list-group">
+                  <ul class="">
+                    <li>
+                      msg1
+                    </li>
+                    <li>
+                      My cvzx
+                    </li>
+                    <li>
+                      Ssdasd
+                    </li>
+                    <li>
+                     sdasdas
+                    </li>
+                    <li>
+                      asdqwe
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
+           <button type="button" class="navbar-toggle collapsed pull-left" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-controls="bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
